--- a/src/Pelo.Web/Views/Invoice/Add.cshtml
+++ b/src/Pelo.Web/Views/Invoice/Add.cshtml
@@ -1,4 +1,5 @@
-﻿@model Pelo.Web.Models.Invoice.InsertInvoiceModel
+﻿@using Pelo.Common.Dtos.Product
+@model Pelo.Web.Models.Invoice.InsertInvoiceModel
 
 @{
     ViewBag.Title = "Thêm đơn hàng";
@@ -93,177 +94,27 @@
         }
         <hr />
         <form class="row" method="post">
-            <div class="col-md-12">
-                <h3>Thêm đơn hàng</h3>
-                @Html.ValidationSummary()
-                @Html.HiddenFor(c => c.Code)
-                @Html.HiddenFor(c => c.CustomerId)
-            </div>
-            <div class="col-6">
-                <div class="form-group form-group--float">
-                    @Html.TextBoxFor(c => c.Need,
-                                     new
-                                          {
-                                                 @class = "form-control",
-                                                 @autocomplete = "none"
-                                         })
-                    <label>Nhu cầu</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.Need)
-                </div>
-                <div class="form-group form-group--float">
-                    @Html.TextAreaFor(c => c.Description,
-                                     new
-                                     {
+            <div class="form-group form-group--float">
+                <select class="form-control select2" id="txtProduct">
+                    <option value="0">--Chọn thêm sản phẩm--</option>
+                    @{
+                        var products = ViewBag.Products as List<ProductSimpleModel>;
+                        if(products!=null) {
+                            foreach (var product in products) {
+                                <option value="@product.Id" data-price="@product.SellPrice">@product.Name</option>
+                            }
+                        }
+                    }
+                </select>
+                @*@Html.TextBoxFor(c => c.ContactDate,
+                                 new {
                                              @class = "form-control",
-                                             @autocomplete = "none"
+                                             @autocomplete = "none",
+                                             @id = "datepicker"
                                      })
-                    <label>Ghi chú</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.Description)
-                </div>
-                <div class="form-group form-group--float">
-                    @Html.TextBoxFor(c => c.ContactDate,
-                                     new
-                                     {
-                                         @class = "form-control",
-                                         @autocomplete = "none",
-                                         @id = "datepicker"
-                                     })
-                    <label>Ngày liên hệ</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.ContactDate)
-                </div>
-                <div class="form-group form-group--float">
-                    @Html.TextBoxFor(c => c.ContactTime,
-                                     new
-                                     {
-                                         @class = "form-control",
-                                         @autocomplete = "none",
-                                         @id = "timepicker"
-                                     })
-                    <label>Giờ liên hệ:</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.ContactTime)
-                </div>
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" multiple id="UserIds" name="UserIds">
-                        @{
-                            var users = ViewBag.UserCares as List<UserDisplaySimpleModel>;
-                            if (users != null)
-                            {
-                                foreach (var user in users)
-                                {
-                                    <option value="@user.Id">@user.DisplayName</option>
-                                }
-                            }
-                        }
-                    </select>
-                    <label>Người phụ trách</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.UserIds)
-                </div>
-            </div>
-            <div class="col-5">
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" id="CrmPriorityId" name="CrmPriorityId">
-                        @{
-                            var priotities = ViewBag.CrmPriorities as List<CrmPrioritySimpleModel>;
-                            if (priotities != null)
-                            {
-                                foreach (var item in priotities)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
-                        }
-                    </select>
-                    <label>Mức độ khẩn cấp</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.CrmPriorityId)
-                </div>
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" id="CustomerSourceId" name="CustomerSourceId">
-                        @{
-                            var datas = ViewBag.CustomerSources as List<CustomerSourceSimpleModel>;
-                            if (datas != null)
-                            {
-                                foreach (var item in datas)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
-                        }
-                    </select>
-                    <label>Nguồn khách hàng</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.CustomerSourceId)
-                </div>
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" id="ProductGroupId" name="ProductGroupId">
-                        @{
-                            var product = ViewBag.ProductGroups as List<ProductGroupSimpleModel>;
-                            if (product != null)
-                            {
-                                foreach (var item in product)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
-                        }
-                    </select>
-                    <label>Nhóm sản phẩm</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.ProductGroupId)
-                </div>
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" id="CrmStatusId" name="CrmStatusId">
-                        @{
-                            var status = ViewBag.CrmStatuses as List<CrmStatusSimpleModel>;
-                            if (status != null)
-                            {
-                                foreach (var item in status)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
-                        }
-                    </select>
-                    <label>Trạng thái</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.CrmStatusId)
-                </div>
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" id="CrmTypeId" name="CrmTypeId">
-                        @{
-                            var crmType = ViewBag.CrmTypes as List<CrmTypeSimpleModel>;
-                            if (crmType != null)
-                            {
-                                foreach (var item in crmType)
-                                {
-                                    <option value="@item.Id">@item.Name</option>
-                                }
-                            }
-                        }
-                    </select>
-                    <label>Kiểu chốt</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.CrmTypeId)
-                </div>
-                <div class="form-group form-group--float">
-                    <select class="form-control select2" id="Visit" name="Visit">
-                        <option value="-1">Tất cả</option>
-                        <option value="0">Chưa đến</option>
-                        <option value="1">Đã đến</option>
-                    </select>
-                    <label>Đến cửa hàng</label>
-                    <i class="form-group__bar"></i>
-                    @Html.ValidationMessageFor(c => c.Visit)
-                </div>
-            </div>
-            <div class="col-12 cmd-center">
-                <button type="submit" class="btn btn-primary">Lưu</button>
-                <a class="btn btn-secondary" href="@Url.Action("Index")">Hủy</a>
+                <label>Ngày liên hệ</label>
+                <i class="form-group__bar"></i>
+                @Html.ValidationMessageFor(c => c.ContactDate)*@
             </div>
         </form>
     </div>
