--- a/src/Pelo.Web/Views/Shared/_Chat.cshtml
+++ b/src/Pelo.Web/Views/Shared/_Chat.cshtml
@@ -13,7 +13,7 @@
     <div class="scrollbar-inner">
         <div class="listview listview--hover chat__buddies">
             <a class="listview__item chat__available">
-                <img src="demo/img/profile-pics/7.jpg" class="listview__img" alt="">
+                <img src="~/demo/img/profile-pics/7.jpg" class="listview__img" alt="">
 
                 <div class="listview__content">
                     <div class="listview__heading">Jeannette Lawson</div>
@@ -22,7 +22,7 @@
             </a>
 
             <a class="listview__item chat__available">
-                <img src="demo/img/profile-pics/5.jpg" class="listview__img" alt="">
+                <img src="~/demo/img/profile-pics/5.jpg" class="listview__img" alt="">
 
                 <div class="listview__content">
                     <div class="listview__heading">Jeannette Lawson</div>
@@ -31,7 +31,7 @@
             </a>
 
             <a class="listview__item chat__away">
-                <img src="demo/img/profile-pics/3.jpg" class="listview__img" alt="">
+                <img src="~/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
 
                 <div class="listview__content">
                     <div class="listview__heading">Jeannette Lawson</div>
@@ -40,7 +40,7 @@
             </a>
 
             <a class="listview__item">
-                <img src="demo/img/profile-pics/8.jpg" class="listview__img" alt="">
+                <img src="~/demo/img/profile-pics/8.jpg" class="listview__img" alt="">
 
                 <div class="listview__content">
                     <div class="listview__heading">Jeannette Lawson</div>
@@ -49,7 +49,7 @@
             </a>
 
             <a class="listview__item">
-                <img src="demo/img/profile-pics/6.jpg" class="listview__img" alt="">
+                <img src="~/demo/img/profile-pics/6.jpg" class="listview__img" alt="">
 
                 <div class="listview__content">
                     <div class="listview__heading">Jeannette Lawson</div>
@@ -58,7 +58,7 @@
             </a>
 
             <a class="listview__item chat__busy">
-                <img src="demo/img/profile-pics/9.jpg" class="listview__img" alt="">
+                <img src="~/demo/img/profile-pics/9.jpg" class="listview__img" alt="">
 
                 <div class="listview__content">
                     <div class="listview__heading">Jeannette Lawson</div>
