--- a/src/Pelo.Web/Views/Shared/_Header.cshtml
+++ b/src/Pelo.Web/Views/Shared/_Header.cshtml
@@ -45,7 +45,7 @@
                     </div>
 
                     <a href="" class="listview__item">
-                        <img src="demo/img/profile-pics/1.jpg" class="listview__img" alt="">
+                        <img src="~/demo/img/profile-pics/1.jpg" class="listview__img" alt="">
 
                         <div class="listview__content">
                             <div class="listview__heading">
@@ -56,7 +56,7 @@
                     </a>
 
                     <a href="" class="listview__item">
-                        <img src="demo/img/profile-pics/2.jpg" class="listview__img" alt="">
+                        <img src="~/demo/img/profile-pics/2.jpg" class="listview__img" alt="">
 
                         <div class="listview__content">
                             <div class="listview__heading">
@@ -68,7 +68,7 @@
                     </a>
 
                     <a href="" class="listview__item">
-                        <img src="demo/img/profile-pics/3.jpg" class="listview__img" alt="">
+                        <img src="~/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
 
                         <div class="listview__content">
                             <div class="listview__heading">
@@ -80,7 +80,7 @@
                     </a>
 
                     <a href="" class="listview__item">
-                        <img src="demo/img/profile-pics/4.jpg" class="listview__img" alt="">
+                        <img src="~/demo/img/profile-pics/4.jpg" class="listview__img" alt="">
 
                         <div class="listview__content">
                             <div class="listview__heading">
@@ -92,7 +92,7 @@
                     </a>
 
                     <a href="" class="listview__item">
-                        <img src="demo/img/profile-pics/5.jpg" class="listview__img" alt="">
+                        <img src="~/demo/img/profile-pics/5.jpg" class="listview__img" alt="">
 
                         <div class="listview__content">
                             <div class="listview__heading">
@@ -124,7 +124,7 @@
 
                     <div class="listview__scroll scrollbar-inner">
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/1.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/1.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">David Belle</div>
@@ -133,7 +133,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/2.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/2.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">Jonathan Morris</div>
@@ -142,7 +142,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/3.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">Fredric Mitchell Jr.</div>
@@ -151,7 +151,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/4.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/4.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">Glenn Jecobs</div>
@@ -160,7 +160,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/5.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/5.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">Bill Phillips</div>
@@ -169,7 +169,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/1.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/1.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">David Belle</div>
@@ -178,7 +178,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/2.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/2.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">Jonathan Morris</div>
@@ -187,7 +187,7 @@
                         </a>
 
                         <a href="" class="listview__item">
-                            <img src="demo/img/profile-pics/3.jpg" class="listview__img" alt="">
+                            <img src="~/demo/img/profile-pics/3.jpg" class="listview__img" alt="">
 
                             <div class="listview__content">
                                 <div class="listview__heading">Fredric Mitchell Jr.</div>
