--- a/src/Pelo.Web/Views/Crm/Update.cshtml
+++ b/src/Pelo.Web/Views/Crm/Update.cshtml
@@ -84,6 +84,12 @@
                 @Html.ValidationSummary()
                 @Html.HiddenFor(c => c.Code)
                 @Html.HiddenFor(c => c.CustomerId)
+                @Html.HiddenFor(c => c.Name)
+                @Html.HiddenFor(c => c.Address)
+                @Html.HiddenFor(c => c.Phone)
+                @Html.HiddenFor(c => c.CustomerVip)
+                @Html.HiddenFor(c => c.CustomerGroup)
+
             </div>
             <div class="col-6">
                 <div class="form-group form-group--float">
